# zi_wei_dou_shu

./: .gitignore  CMakeLists.txt  README.md  build.sh  change.sh  doxyfile
database/: zi_wei.db
demo/: CMakeLists.txt  README.md  build.sh  demo.cpp
docs/: README.md
include/: os.h  service.h  sql_example_msg.h  sqlite3_api.h
libs/arm/glog/lib/: libglog.la  libglog.so.0.0.0
libs/arm/glog/lib/pkgconfig/: libglog.pc
libs/x64/glog/include/glog/: flogging.h
libs/x64/glog/lib/: libglog.so.0.0.0
libs/x64/sqlite3/lib/: sqlite3
libs/x64/sqlite3/package/sqlite3/: build_bin.sh
macro/: cmake_build_macro.h  cmake_build_macro.h.in
src/: project.cpp  service.cpp  sqlite3_api.cpp
